fonsole/dev/fomage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fomage-svc
spec:
  selector:
    app: fomage
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
